constraint violations. [David]

=item *

Looking up a document or template by version ID no longer fails if the asset
has been checked out and not yet checked back in since that version ID was
created. Among other subtle bugs, this change fixes publishes that failed with
the error message 'Can't call method "get_id" on an undefined value'. Reported
by Scott (Bug #1417). [David]

=back

=head1 VERSION 1.10.6 (2008-10-02)

=head2 Improvements

=over

=item *

Added an "TraceEnable off" entry to the config in
L<Bric::App::ApacheConfig|Bric::App::ApacheConfig>> for Apache to neutralize
the potentially malicious use of HTTP TRACE requests.
L<http://www.apacheweek.com/issues/03-01-24> [Dave Beaudet, Alex Krohn]

=item *

Changed an index in the story and media instance tables to improve query
speed. Thanks to Alex Krohn for reporting the performance issue. [David and
Josh Berkus]

=item *

Tweaked F<contrib/bric_media_upload/bric_media_upload> so that it uses
C<bric_soap site list_ids> instead of C<bric_soap category list_ids> for setting
the login cookie. That should be more efficient for installations that have many
more categories than they have sites. [Scott]

=item *

Added C<--use-related-uri> option to C<bric_soap>. [Scott, David]

=item *

For media uploaded through the Story Profile, the cover date now defaults to
the current date/time instead of the cover date of the story. [Scott]

=item *

Added search by Keyword to "Find Media". [Scott]

=item *

When the "Filter by Site Context" preference is turned on, if a user does a
search and then changes the site context, the search results will not change
to the new site until the user submits a new search. Reported by Matt Rolf
(Bug #1337). [David]

=item *

Rewrote (again) the way in which stale files are identified for expiration. It
used to be that Bricolage would look for all resources associated with a given
document and output channel but none of the current jobs. But if a story had